Bug 328996 - Default mail model is not applied when replying in 4.12.0
Summary: Default mail model is not applied when replying in 4.12.0
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.12 pre
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-19 09:46 UTC by Richard Van Den Boom
Modified: 2014-01-17 08:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Van Den Boom 2013-12-19 09:46:41 UTC
Since upgrading to KDE applications 4.12.0 yesterday, when I reply to a mail, noting is displayed anymore in the reply editor window as far as fields are concerned. Only my signature is displayed, while the default model is the following :


%REM="Modèle de réponse à tous par défaut"%-
%CURSOR
--
%SIGNATURE

Le %ODATE %OTIMELONG vous avez écrit :
%QUOTE


It works with personnalized models however, though I've not been able to get proper signature support for ages and it's still not working. I use model like this :

<some various text>
%SIGNATURE

Le %ODATE %OTIMELONG vous avez écrit :
%QUOTE

and never get the signature, though the rest appear.
I do use several identities in kmail, with different signatures, if that can help.

Reproducible: Always

Steps to Reproduce:
1.Reply to a mail
2.No previous mail quote, no message
3.
Actual Results:  
The editing window open to write my answer but in the editing field, only the signature is displayed, no text quotation even if I explicitely selected some part of the original mail I'm answering to.

Expected Results:  
I should have all the fields that are supposed to be added automatically to my answer in the model.
Comment 1 Markus Zimmermann 2013-12-27 12:24:01 UTC
I have the same problem since I upgraded to kde 4.12.0. I am using the 412 repository with opensuse 13.1 on 64bit.

I can reproduce the problem everytime. When I reply/reply-all/forward-inline a mail (does not matter if I select a text in the mail or not) only my signature is shown. Instead of the quoted text/mail.

I also noticed that when I reply/reply-all/forward-inline a mail, the rich-text option is automatically selected. This was not happening before.
Comment 2 Vincenzo Reale 2014-01-15 20:06:48 UTC
The problem is still present in KDE 4.12.1 on Archlinux 64bit.
Removing or commenting out %SIGNATURE from the template solves the issue.
Comment 3 Markus Zimmermann 2014-01-15 21:30:21 UTC
I can confirm what smart2128 wrote with kde 4.12.1 on opensuse 13.1.
Comment 4 Richard Van Den Boom 2014-01-15 21:34:09 UTC
Yes, same here on Slackware64-current with KDE apps 4.12.1.
If I remove %SIGNATURE from the standard template, the initial mail is copied in the answer. If I put it back, nothing is displayed anymore expect the signature.
Personnalized models still copy the mail I reply to as well as add the personnalized text, but they always fail to display %SIGNATURE.
I didn't enable any signature for my default account and everything works as expected there.
Comment 5 Laurent Montel 2014-01-16 09:06:25 UTC
Do you have reply in html ?
Do you use html mail ?
Do you reply on html mail ?

Do you have a html signature ?
Comment 6 Richard Van Den Boom 2014-01-16 09:29:31 UTC
1/ I don't have any %FORCEDHTML tag in my templates if that was the question.

2/ As far as I'm concerned, yes, HTML is prefered to simple text in Security config. And I use HTML in writing mails, as far as I know.

3/  I do not reply or forward by default in HTML (Editor config -> General tab).

4/ My signatures are in HTML, for the accounts which do use signatures. The only account that works properly, my default one, has no signature, and I do not use HTML for it in display or answers.

Hope it helps.
Comment 7 Markus Zimmermann 2014-01-16 12:14:13 UTC
I do not have a html signature (it's plain text). And the bug happens for me with both html and plain text mails. I can really trigger the bug perfectly by adding %SIGNATURE to my reply template.
Comment 8 Vincenzo Reale 2014-01-16 19:53:32 UTC
Plain text for all
Comment 9 Laurent Montel 2014-01-17 07:58:08 UTC
Ok I confirm it.
Comment 10 Laurent Montel 2014-01-17 08:02:28 UTC
Git commit b640f17c5612e82f88c5d360c37d26b05c0d4625 by Montel Laurent.
Committed on 17/01/2014 at 08:01.
Pushed by mlaurent into branch 'KDE/4.12'.

Fix Bug 328996 - Default mail model is not applied when replying in 4.12.0

Revert "Fix Bug 328220 - Emailadress as Link in my Signature"

This reverts commit 626b7496a87c01cbd0566f9de1a8dbe41ddc855c.

M  +9    -15   templateparser/templateparser.cpp

http://commits.kde.org/kdepim/b640f17c5612e82f88c5d360c37d26b05c0d4625