Fix Bug 328996 - Default mail model is not applied when replying in 4.12.0

BUG: 328996

Revert "Fix Bug 328220 - Emailadress as Link in my Signature"

This reverts commit 626b7496a87c01cbd0566f9de1a8dbe41ddc855c.